--- a/index.css
+++ b/index.css
@@ -11,9 +11,6 @@ html{
     width: 100%;
     height: 100%;
     color: #fff;
-    
-    
-    
 }
 
 .cartao-login{
@@ -43,12 +40,17 @@ input{
 
 a{
     color: #f97415;
+    text-decoration-line: none;
+    margin-top: 5vh;
 }
 
 button{
     background-color: #f97415;
     color: #FFF;
     border-radius: 5px;
+    border-style: none;
     width: 400px;
-    height: 70px;
+    height: 
+    50px;
+    margin-top: 100px;
 }
