Alterações de estilo Login e Cadastro

--- a/pg-cadastro.css
+++ b/pg-cadastro.css
@@ -82,7 +82,7 @@ select {
     border-radius: 0.5rem;
     color: #F9FAFB;
     font-size: 1rem;
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 input::placeholder {
