--- a/index.css
+++ b/index.css
@@ -93,8 +93,10 @@ button{
     border-radius: 5px;
     border-style: none;
     width: 27.2rem;
-    height: 
-    50px;
+    height:50px;
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-bottom: 0.5rem;
     
 }
 
