alterações dos botoes

--- a/pg-cadastro.css
+++ b/pg-cadastro.css
@@ -125,6 +125,8 @@ button {
 
 button:hover {
     transform: scale(1.03);
+    background-color: #F97316;
+    border-style: none;
 }
 
 .btn-cancelar {
