--- a/frontend/src/pages/painel-admin/painel-admin.css
+++ b/frontend/src/pages/painel-admin/painel-admin.css
@@ -17,20 +17,27 @@ body {
     
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    
     color: #FFF;
  }
 
  button{
-    padding: 0.8rem 1rem;
+    height: 50px;
+    padding: 0.8rem 3rem;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: 0.3rem;
     font-size: 1rem;
     font-weight: 700;
     cursor: pointer;
     transition: transform 0.2s ease, background-color 0.2s ease;
     color: #FFF;
     background-color: #F97316;;
+}
+
+.pgn{
+    width: auto;
+    height: 93vh;
+    ;
 }
 
 .container{
@@ -44,19 +51,62 @@ body {
 }
 
 .container div{
-    width: 205px;
-    height: 130px;
+    margin-top: 150px;
+    width: 440px;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #172435;
+    border: 0.5px solid #4B5563; 
     border-radius: 0.5rem;
 }
 
 
 .tabela-chamados{
+    position: relative;
+    margin-top: 150px;
+    background-color: #172435;
+    width: auto;
+    height: 10vh;
+    display: flex;
+    justify-content: center;    
     color: #FFF;
+    
+    border-radius: 0.5rem
 }
 
+.tabela-chamados caption{
+    display: flex;
+    justify-content: space-around;
+    font-weight: 700;
+    font-size: x-large;
+}
+
+.tabela-chamados th{
+    width: 500px;
+    background-color: #374151;
+    border: 1px solid #4B5563; 
+    border-radius: 0.5rem;
+}
+
+ .icon{
+    width: 50px;
+    height: 50px;
+ }
+
+ #prazo{
+    color: green;
+ }
+
+ #atraso{
+    color: red;
+ }
+
+ #tempo{
+    color: #F97316;
+ }
  
- 
+ #colaborador{
+    color: #F97316;
+ }
