--- a/frontend/src/pages/painel-admin/painel-admin.css
+++ b/frontend/src/pages/painel-admin/painel-admin.css
@@ -55,25 +55,34 @@ body {
     width: 440px;
     height: 250px;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: #172435;
     border: 0.5px solid #4B5563; 
     border-radius: 0.5rem;
 }
 
+table {
+
+  border-collapse: collapse;
+  color: #E0E0E0;
+  font-size: 14px;
+
+}
 
 .tabela-chamados{
     position: relative;
     margin-top: 150px;
     background-color: #172435;
     width: auto;
-    height: 10vh;
+    height: 50vh;
     display: flex;
     justify-content: center;    
+    align-items: baseline;
     color: #FFF;
-    
-    border-radius: 0.5rem
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 .tabela-chamados caption{
@@ -81,13 +90,18 @@ body {
     justify-content: space-around;
     font-weight: 700;
     font-size: x-large;
+    padding: 15px;
 }
 
+
+
 .tabela-chamados th{
-    width: 500px;
+    width: 450px;
+    height: 30px;
     background-color: #374151;
-    border: 1px solid #4B5563; 
-    border-radius: 0.5rem;
+    font-weight: 600;
+    color: #f1f1f1;
+    border-bottom: 2px solid #343f52; 
 }
 
  .icon{
